Pass short time format to GetTimeFormat from GetLocaleInfo

TIME_NOSECONDS doesn't really switch to short time format,
just removes the seconds from long time format.

On picking to 5.15, getLocaleInfo() is templated to return QString,
not QVariant, so drop its return's toString() in the new code.
Also rename a later local variable to avoid shadowing format (and,
incidentally, match dev so as to avoid conflicts there on any later
patches).

Fixes: QTBUG-110627
Change-Id: Ie799958f3942c657f00bc8196588258661ddc1d9
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 763884cfb7be0cadd353cfa3b9b760d521851718)
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Mate Barany <mate.barany@qt.io>